css/style.css
body {
  color: rgb(85, 85, 85);
  background-color: rgb(255, 255, 255);
  font-family: 'Open Sans', sans-serif;
  font: 16px/1.5 "Open Sans", sans-serif;
  padding-top: 50px;
  padding-bottom: 70px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

nav > .container {
  max-width: 720px;
}

.navbar-default .navbar-brand {
  color: rgb(85, 85, 85);
}

#content {
  margin: auto;
  max-width: 720px;
}

/* https://webtypography.net/2.3.2 */
p {
  margin: 0;
}

#content img {
  max-width: 100%;
}

#content h2 {
  font-size: 1.5em;
  margin-top: 1.125em;
  margin-bottom: 1.125em;
}

#content h1, #home h2 {
  text-align: center;
  font-size: 2em;
  margin: 1em auto;
  max-width: 16.5em;
}

#home img.feature {
  width: 200px;
  height: 200px;
  margin: auto;
  display: block;
  border-radius: 50%;
  box-shadow: 2px 2px 5px #D5D5D5;
}

img {
  margin: 1.5em auto;
  display: block;
}

#home {
  padding-top: 1.5em;
}

#home ul {
  list-style: none;
  padding: 0;
  text-align: center;
}

#home > ul {
  display: inline-block;
  width: 32%;
  vertical-align: top;
}

pre {
  padding: 2em 1em;
  margin: 2em 0;
  overflow-x: auto;
  font-size: .75em;
}

pre code {
  overflow-wrap: normal;
  white-space: pre;
}

.navbar-default {
  background-color: inherit;
  border-style: transparent;
}

table {
  margin: 1.5em 0;
}

th, td {
  padding: .75em;
}

table, th, td {
  border: 1px solid rgb(85, 85, 85);
  min-width: 5em;
}

ul, ol {
  margin: 1.5em 0;
}

@media (max-width: 750px) {
  #home > ul {
      width: 49%;
  }
}

@media (max-width: 450px) {
  #home > ul {
      width: 100%;
  }
}

